--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
       <div class="md:w-2/5 flex justify-center" data-aos="fade-left" data-aos-duration="1000">
         <div class="relative">
           <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white shadow-xl">
-            <img src="Images/profile.jpg" alt="Vijay Kumar" class="w-full h-full object-cover">
+            <img src="Images/mypic.jpg" alt="Vijay Kumar" class="w-full h-full object-cover">
           </div>
           <div class="absolute -bottom-4 -right-4 bg-yellow-400 text-blue-800 rounded-lg py-2 px-4 shadow-lg">
             <span class="font-bold">5+ Years Experience</span>
