--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
         </div>
       </div>
 
-      <!-- Timeline Item 3 -->
+      <!-- Timeline Item 3a -->
       <div class="timeline-item">
         <div class="timeline-icon"></div>
         <div class="timeline-content">
@@ -703,6 +703,24 @@
           </p>
         </div>
       </div>
+
+	     <!-- Timeline Item 3b -->
+      <div class="timeline-item">
+        <div class="timeline-icon"></div>
+        <div class="timeline-content">
+          <div class="flex justify-between items-start mb-2">
+            <h3 class="text-xl font-bold text-dynamic">Technical Product Management Intern</h3>
+            <span class="text-sm font-medium experience-date py-1 px-2 rounded">Jan 2025 – Present</span>
+          </div>
+          <h4 class="text-lg font-medium text-dynamic mb-2">
+            <a href="https://www.thirdestateanalytics.com/about/" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Third Estates - Apprenticeship</a>
+          </h4>
+          <p class="text-dynamic mb-4">
+            Streamlined property eligibility assessments by automating data collection , data cleaning, designing interactive Tableau dashboards, and optimizing ETL pipelines while collaborating with engineers to deliver compliant, data-driven urban planning solutions.
+          </p>
+        </div>
+      </div>
+
 
       <!-- Timeline Item 4 -->
       <div class="timeline-item">
@@ -1448,12 +1466,19 @@
           </a>
         </div>
       </div>
+
+	 <!-- Certification Card 6 -->
+      <div class="cert-card relative rounded-lg overflow-hidden shadow-lg card-hover group">
+        <img src="Images/ITSM01.jpg" alt="ITSM Certification" class="w-full h-64 object-cover transition-transform duration-300 group-hover:scale-105">
+        <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-50 transition duration-300 flex items-center justify-center">
+          <a href="https://www.linkedin.com/learning/certificates/28775b819d52580481183342639e0dd943176157df26d57857267fcaca04aa09?trk=share_certificate" class="view-cert text-white text-xl font-bold opacity-0 group-hover:opacity-100 transition duration-300">
+            View Certification
+          </a>
+        </div>
+      </div>
 	  
     </div>
   </div>
-  
-  
-  
   
 </section>
 
