--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
             <span class="text-sm font-medium experience-date py-1 px-2 rounded">Jan 2025 – Present</span>
           </div>
           <h4 class="text-lg font-medium text-dynamic mb-2">
-            <a href="https://www.habitat.org/us-ny/buffalo/hfh-buffalo" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">HFHB - Project Clinic</a>
+            <a href="https://www.habitat.org/us-ny/buffalo/hfh-buffalo" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Project Clinic-HFHB -HFHB</a>
           </h4>
           <p class="text-dynamic mb-4">
             Streamlined homebuyer program processes by designing workflow maps, optimizing applicant tracking, and developing user-friendly pre-screening forms while collaborating with teams to enhance guidelines and financial literacy resources.
@@ -679,7 +679,7 @@
             <span class="text-sm font-medium experience-date py-1 px-2 rounded">Jan 2025 – Present</span>
           </div>
           <h4 class="text-lg font-medium text-dynamic mb-2">
-            <a href="https://thedoze.co/" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Doze - Project Clinic</a>
+            <a href="https://thedoze.co/" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Project Clinic- Doze </a>
           </h4>
           <p class="text-dynamic mb-4">
             Conducted market analysis, developed product strategies by identifying key customer segments, creating detailed personas and roadmaps, executed marketing initiatives, collaborated with influencers, and refined pricing strategies.
@@ -696,7 +696,7 @@
             <span class="text-sm font-medium experience-date py-1 px-2 rounded">Jan 2025 – Present</span>
           </div>
           <h4 class="text-lg font-medium text-dynamic mb-2">
-            <a href="https://www.sanahealthandwellness.com/about" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Sana - Project Clinic</a>
+            <a href="https://www.sanahealthandwellness.com/about" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Project Clinic-Sana</a>
           </h4>
           <p class="text-dynamic mb-4">
             Enhanced marketing strategies, created promotional materials, and optimized the website’s structure, content, and navigation to improve user experience and streamline client interactions.
@@ -713,7 +713,7 @@
             <span class="text-sm font-medium experience-date py-1 px-2 rounded">Jan 2025 – Present</span>
           </div>
           <h4 class="text-lg font-medium text-dynamic mb-2">
-            <a href="https://www.thirdestateanalytics.com/about/" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Third Estates - Apprenticeship</a>
+            <a href="https://www.thirdestateanalytics.com/about/" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Apprenticeship(Exp IT)- Third Estates</a>
           </h4>
           <p class="text-dynamic mb-4">
             Streamlined property eligibility assessments by automating data collection , data cleaning, designing interactive Tableau dashboards, and optimizing ETL pipelines while collaborating with engineers to deliver compliant, data-driven urban planning solutions.
