--- a/index.html
+++ b/index.html
@@ -1476,6 +1476,26 @@
           </a>
         </div>
       </div>
+
+	    <!-- Certification Card 7 -->
+      <div class="cert-card relative rounded-lg overflow-hidden shadow-lg card-hover group">
+        <img src="Images/prm01.jpg" alt="Project Management Certification" class="w-full h-64 object-cover transition-transform duration-300 group-hover:scale-105">
+        <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-50 transition duration-300 flex items-center justify-center">
+          <a href="https://www.linkedin.com/learning/certificates/9675d3b8dae2886fc07bf6ec3e4408671a207eec95b42eaaa89e5dbe0593cc9e?trk=share_certificate" class="view-cert text-white text-xl font-bold opacity-0 group-hover:opacity-100 transition duration-300">
+            View Certification
+          </a>
+        </div>
+      </div>
+
+<!-- Certification Card 8 -->
+      <div class="cert-card relative rounded-lg overflow-hidden shadow-lg card-hover group">
+        <img src="Images/az500.jpg" alt="AZ-500 PREP Certification" class="w-full h-64 object-cover transition-transform duration-300 group-hover:scale-105">
+        <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-50 transition duration-300 flex items-center justify-center">
+          <a href="https://www.linkedin.com/learning/certificates/e9099d54520fcad7b6d6606ede166a48916c25135387951e5c86230714179c2e?trk=share_certificate" class="view-cert text-white text-xl font-bold opacity-0 group-hover:opacity-100 transition duration-300">
+            View Certification
+          </a>
+        </div>
+      </div>
 	  
     </div>
   </div>
