--- a/index.html
+++ b/index.html
@@ -843,7 +843,37 @@
         </div>
         
         <!-- Projects Grid -->
+	
+	    
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+		<!-- New Project Card: AI Contract Analyzer -->
+	<div class="project-card relative bg-gray-50 dark:bg-gray-800 rounded-lg overflow-hidden shadow-lg card-hover" data-category="development ai" data-aos="fade-up" data-aos-delay="700">
+    <div class="relative overflow-hidden group h-64">
+        <img src="https://via.placeholder.com/600x400?text=AI+Contract+Analyzer" alt="AI Contract Analyzer" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+        <div class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-0 group-hover:opacity-70 transition-opacity duration-300 flex items-end">
+            <div class="p-4">
+                <div class="flex space-x-2 mb-2">
+                    <span class="px-2 py-1 bg-green-600 text-white text-xs rounded">Development</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="p-6 pb-16 relative">
+        <h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-white">AI Contract Analyzer</h3>
+        <p class="text-gray-600 dark:text-gray-400 mb-4">
+            Developed an offline AI-driven lease analysis system using Mistral 7B, Ollama, and PyMuPDF that extracts, summarizes, and flags critical clauses from unstructured real estate documents with 85% accuracy, reducing review time by 70% and enhancing risk visibility for non-legal stakeholders.
+        </p>
+        <div class="absolute bottom-6 right-6 flex space-x-2">
+            <a href="#" class="text-gray-500 hover:text-blue-600 transition-colors duration-300" aria-label="View on GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="#" class="text-gray-500 hover:text-blue-600 transition-colors duration-300" aria-label="View Documentation">
+                <i class="fas fa-file-alt"></i>
+            </a>
+      	  </div>
+   	 </div>
+	</div>
             <!-- Project Card: Airfare Price Prediction -->
             <div class="project-card relative bg-gray-50 dark:bg-gray-800 rounded-lg overflow-hidden shadow-lg card-hover" data-category="development ai" data-aos="fade-up" data-aos-delay="700">
                 <div class="relative overflow-hidden group h-64">
