--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
 		<!-- New Project Card: AI Contract Analyzer -->
 	<div class="project-card relative bg-gray-50 dark:bg-gray-800 rounded-lg overflow-hidden shadow-lg card-hover" data-category="development ai" data-aos="fade-up" data-aos-delay="700">
     <div class="relative overflow-hidden group h-64">
-        <img src="https://via.placeholder.com/600x400?text=AI+Contract+Analyzer" alt="AI Contract Analyzer" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+        <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2032&q=80" alt="AI RAG System" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
         <div class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-0 group-hover:opacity-70 transition-opacity duration-300 flex items-end">
             <div class="p-4">
                 <div class="flex space-x-2 mb-2">
