--- a/index.html
+++ b/index.html
@@ -744,14 +744,14 @@
         <div class="timeline-icon"></div>
         <div class="timeline-content">
           <div class="flex justify-between items-start mb-2">
-            <h3 class="text-xl font-bold text-dynamic">Senior Solution Support Engineer</h3>
+            <h3 class="text-xl font-bold text-dynamic">Senior Associate, Product Owner</h3>
             <span class="text-sm font-medium experience-date py-1 px-2 rounded">Mar 2023 – May 2024</span>
           </div>
           <h4 class="text-lg font-medium text-dynamic mb-2">
             <a href="https://configit.com/solutions/clm/configuration-lifecycle-management-for-the-enterprise/" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Configit A/S, India</a>
           </h4>
           <p class="text-dynamic mb-4">
-            Provided enterprise-level SaaS support, managing workflows, API integrations, and system architectures while collaborating with Product and Engineering teams to troubleshoot issues and enhance deployments.
+		Led cross-functional product delivery across Salesforce, SAP, Jira, and Azure DevOps, translating complex business needs into actionable user stories, enforcing regulatory compliance, and driving 25% faster GTM execution, 30% data integrity gains, and 60% feature success through A/B testing, stakeholder alignment, and continuous delivery.
           </p>
         </div>
       </div>
@@ -761,14 +761,14 @@
         <div class="timeline-icon"></div>
         <div class="timeline-content">
           <div class="flex justify-between items-start mb-2">
-            <h3 class="text-xl font-bold text-dynamic">Product Support Engineer</h3>
+            <h3 class="text-xl font-bold text-dynamic">Associate, Product Owner</h3>
             <span class="text-sm font-medium experience-date py-1 px-2 rounded">Feb 2021 – Feb 2023</span>
           </div>
           <h4 class="text-lg font-medium text-dynamic mb-2">
             <a href="https://configit.com/solutions/clm/" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">Configit A/S, India</a>
           </h4>
           <p class="text-dynamic mb-4">
-            Handled enterprise-level SaaS support, led triage meetings, collaborated cross-functionally, ensured Azure security through monitoring and automation, and maintained documentation for better coordination.
+            Spearheaded enterprise-grade CLM, CPQ and QTC transformations by managing 20+ features across SAP VC, Salesforce, Jira, and Azure DevOps, aligning GTM, finance, sales and engineering to drive 20% revenue growth and cut configuration/quote time by 50%.
           </p>
         </div>
       </div>
@@ -778,16 +778,14 @@
         <div class="timeline-icon"></div>
         <div class="timeline-content">
           <div class="flex justify-between items-start mb-2">
-            <h3 class="text-xl font-bold text-dynamic">Product Specialist</h3>
+            <h3 class="text-xl font-bold text-dynamic">Business Analyst</h3>
             <span class="text-sm font-medium experience-date py-1 px-2 rounded">Feb 2020 – Jan 2021</span>
           </div>
           <h4 class="text-lg font-medium text-dynamic mb-2">
             <a href="https://www.factset.com/our-company/values" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">FactSet, India</a>
           </h4>
           <p class="text-dynamic mb-4">
-            Provided technical mentorship, conducted training sessions, managed escalations, resolved issues globally, and ensured smooth workflows by reducing false alarms.
-          </p>
-        </div>
+           Led technical issue resolution across 25+ financial clients, delivered training to 30+ analysts, reduced onboarding time by 40%, and sustained 98% satisfaction through SQL-based troubleshooting and escalation workflow optimization.
       </div>
 
       <!-- Timeline Item 8 -->
@@ -795,14 +793,14 @@
         <div class="timeline-icon"></div>
         <div class="timeline-content">
           <div class="flex justify-between items-start mb-2">
-            <h3 class="text-xl font-bold text-dynamic">Associate Product Specialist</h3>
+            <h3 class="text-xl font-bold text-dynamic">Product Associate</h3>
             <span class="text-sm font-medium experience-date py-1 px-2 rounded">Dec 2018 – Jan 2020</span>
           </div>
           <h4 class="text-lg font-medium text-dynamic mb-2">
             <a href="https://www.factset.com/our-company/values" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">FactSet, India</a>
           </h4>
           <p class="text-dynamic mb-4">
-            Provided technical support for financial software, troubleshot issues, managed incidents, documented solutions, and collaborated across teams to enhance usability.
+            Facilitated UAT for 8+ features, audited Salesforce CRM pipeline, and analyzed 50K+ sales records using advanced Excel, improving reporting accuracy by 30% and enhancing stakeholder alignment and forecast precision.
           </p>
         </div>
       </div>
