--- a/index.html
+++ b/index.html
@@ -785,7 +785,8 @@
             <a href="https://www.factset.com/our-company/values" target="_blank" rel="noopener noreferrer" class="hover:underline text-dynamic">FactSet, India</a>
           </h4>
           <p class="text-dynamic mb-4">
-           Led technical issue resolution across 25+ financial clients, delivered training to 30+ analysts, reduced onboarding time by 40%, and sustained 98% satisfaction through SQL-based troubleshooting and escalation workflow optimization.
+           Led technical issue resolution across 25+ financial clients, delivered training to 30+ analysts, reduced onboarding time by 40%, and sust</p>p>ained 98% satisfaction through SQL-based troubleshooting and escalation workflow optimization.
+	</p>
       </div>
 
       <!-- Timeline Item 8 -->
